Part-1: correction-4: the file css/style.css has been corrected problem-4: Restaurant title block overlaps with address and phone blocks for screens of size 641px - 768px correction-4: I decided to use for those screens the same layout as for the screens smaller than 641px. The .address, .tel {} block was moved from the media query (max-width 640px) to the media query (max width 768px)

--- a/css/style.css
+++ b/css/style.css
@@ -113,13 +113,21 @@ h2 {
 }
 
 @media screen and (max-width:768px) {
-	body { border :none;}
+	body { border :none;
+
+	}
 	.container {
-	width: 98%;
+	    width: 98%;
 	}
 	.resto {
         padding-bottom: 50px; /*correction-1, correction-3*/
 	}
+    /*correction-4*/
+    .adresse, .tel {
+        position: static;
+        text-align: left;
+        margin: 0.5em 0;
+    }
 	h2 {
 		margin: 0 0 1em;
 	}
@@ -135,12 +143,6 @@ h2 {
 		float:none;
 		width: 100%
 	}
-	.adresse, .tel {
-		position: static;
-		text-align: left;
-		margin: 0.5em 0;
-	}
-
 	h2 {
 		margin:0 0 0.5em;
 	}
